--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -8,7 +8,7 @@
     <!-- Topic tree display -->
     <div class="hidden lg:flex flex-row items-center text-[var(--text-secondary)]">
       {{ currentTopic().title }}
-      <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4">
+      <app-theme-icon name="dropdown-icon" className="w-2 m-4"></app-theme-icon>
       {{ currentView().content.title }}
     </div>
     <!-- Subtopic Navigation -->
@@ -18,7 +18,7 @@
         (click)="prevSubtopic()"
         [disabled]="getPosition() === 'top'"
       >
-        <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4 rotate-180">
+      <app-theme-icon name="dropdown-icon" className="w-2 m-4 rotate-180"></app-theme-icon>
         Previous
       </button>
       <button 
@@ -27,7 +27,7 @@
         [disabled]="getPosition() === 'bottom'"
       >
         Next
-        <img src="images/dropdown-icon-closed.svg" alt="" class="w-2 m-4">
+        <app-theme-icon name="dropdown-icon" className="w-2 m-4"></app-theme-icon>
       </button>
     </div>
   </div>
@@ -35,7 +35,7 @@
   <!-- Subtopic Name -->
   <h1 class="flex flex-row items-center my-6">
     <div class="rounded-full bg-[var(--bg-card)] p-3">
-      <app-theme-icon name="subject-icon" className="w-6" />
+      <img src="images/subject-icon.svg" class="w-6">
     </div>
     <span class="text-3xl font-medium mx-4">{{ currentView().content.title }}</span>
   </h1>
