--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -55,7 +55,7 @@
     <div class="w-full border border-[var(--bg-hover)]/40 rounded-xl p-4">
       <div class="flex justify-between items-center mb-2">
         <div class="flex items-center space-x-2">
-          <img src="images/coin.svg" class="w-5 h-5" alt="" />
+          <app-theme-icon name="coin" class="w-5 h-5"></app-theme-icon>
           <span class="font-medium">{{ planName() }}</span>
         </div>
 
