--- a/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
+++ b/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
@@ -12,12 +12,12 @@
       <form #form="ngForm">
         <!-- Header -->
         <div class="flex flex-row w-full justify-between items-center border-b-2 p-2 border-[var(--text-primary)]">
-          <div class="flex flex-row">
-            <img src="images/exercise-icon.svg" alt="" class="mr-2">
+          <div class="flex flex-row items-center">
+            <app-theme-icon name="exercise-icon" className="w-5 mr-2"/>
             Exercise
           </div>
           <button (click)="toggleExtensionVisibility('exercise')" class="p-2">
-            <img src="images/dropdown-icon-closed.svg" alt="" [class]="`w-2 ${extensionVisibility['exercise'] ? 'rotate-90' : 'rotate-180'}`">
+            <app-theme-icon name="dropdown-icon" [className]="`w-2 ${extensionVisibility['exercise'] ? 'rotate-90' : 'rotate-180'}`"/>
           </button>
         </div>
 
@@ -84,12 +84,12 @@
       <form #form="ngForm" class="my-4 md:my-8">
         <!-- Header -->
         <div class="flex flex-row w-full justify-between items-center border-b-2 p-2 border-[var(--text-primary)]">
-          <div class="flex flex-row">
-            <img src="images/exam-icon.svg" alt="" class="mr-2">
+          <div class="flex flex-row items-center">
+            <app-theme-icon name="exam-icon" className="w-5 mr-2"/>
             Exam
           </div>
           <button (click)="toggleExtensionVisibility('exam')" class="p-2">
-            <img src="images/dropdown-icon-closed.svg" alt="" [class]="`w-2 ${extensionVisibility['exam'] ? 'rotate-90' : 'rotate-180'}`">
+            <app-theme-icon name="dropdown-icon" [className]="`w-2 ${extensionVisibility['exam'] ? 'rotate-90' : 'rotate-180'}`"/>
           </button>
         </div>
 
@@ -156,12 +156,12 @@
       <form #form="ngForm" class="my-4 md:my-8">
         <!-- Header -->
         <div class="flex flex-row w-full justify-between items-center border-b-2 p-2 border-[var(--text-primary)]">
-          <div class="flex flex-row">
-            <img src="images/flashcards-icon.svg" alt="" class="mr-2">
+          <div class="flex flex-row items-center">
+            <app-theme-icon name="flashcards-icon" className="w-5 mr-2"/>
             Flashcards
           </div>
           <button (click)="toggleExtensionVisibility('flashcards')" class="p-2">
-            <img src="images/dropdown-icon-closed.svg" alt="" [class]="`w-2 ${extensionVisibility['flashcards'] ? 'rotate-90' : 'rotate-180'}`">
+            <app-theme-icon name="dropdown-icon" [className]="`w-2 ${extensionVisibility['flashcards'] ? 'rotate-90' : 'rotate-180'}`"/>
           </button>
         </div>
 
