--- a/src/app/shared/components/confirmation/confirmation.html
+++ b/src/app/shared/components/confirmation/confirmation.html
@@ -11,7 +11,7 @@
       <p class="text-[var(--text-secondary)] mb-4">{{options.message}}</p>
       <div class="flex justify-end space-x-3">
         <button
-          class="px-4 py-2 bg-[var(--bg-card)] rounded lg:hover:bg-[var(--bg-card-hover)]"
+          class="px-4 py-2 rounded bg-[var(--bg-card)] lg:hover:bg-[var(--bg-card-hover)]"
           (click)="confirm(false)"
         >
           {{options.cancelText}}
