--- a/src/app/pages/subject-create/lesson-generation/lesson-generation.html
+++ b/src/app/pages/subject-create/lesson-generation/lesson-generation.html
@@ -147,7 +147,7 @@
       </div>
 
       <button (click)="go()" [disabled]="loading">
-        <app-theme-icon name="send-icon" className="w-6 md:w-8"></app-theme-icon>
+        <app-theme-icon name="send-icon" className="w-6 md:w-8 lg:hover:opacity-50 disabled:opacity-50"></app-theme-icon>
       </button>
     </div>
   </form>
