--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -52,7 +52,7 @@
 
       <!-- Subject Card -->
       <div
-        [class]="`relative flex flex-col rounded-2xl w-full sm:w-72 h-40 p-2 m-4 shadow-sm lg:hover:shadow-lg lg:hover:top-2 
+        [class]="`relative flex flex-col rounded-2xl w-full lg:w-72 h-40 p-2 my-4 mx-0 lg:mx-4 shadow-sm lg:hover:shadow-lg lg:hover:top-2 
         transition-shadow duration-150 cursor-pointer bg-[var(--bg-page)] border-2 border-b-8`"
         [style.border-color]="
           subject.status.toLowerCase() === 'in progress'
@@ -101,9 +101,10 @@
                   cx="16"
                   cy="16"
                   r="14"
-                  stroke="var(--text-alt-hover)"
+                  stroke="var(--text-primary)"
                   stroke-width="3"
                   fill="none"
+                  class="opacity-30"
                 ></circle>
                 <!-- Progress circle -->
                 <circle
