--- a/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
+++ b/src/app/pages/subject-create/extension-config-overlay/extension-config-overlay.html
@@ -3,13 +3,13 @@
   (click)="save()"
 >
   <div
-    class="bg-[var(--bg-page)] rounded-lg p-6 md:p-10 w-4/5 md:w-1/2 shadow-lg md:text-xl 
+    class="bg-[var(--bg-page)] rounded-lg px-6 md:px-10 w-4/5 md:w-1/2 shadow-lg md:text-xl 
     max-h-[80%] overflow-y-auto scrollbar-none"
     (click)="$event.stopPropagation()"
   >
     <!-- Exercise Configuration -->
     @if (config.exercise.enabled) {
-      <form #form="ngForm">
+      <form #form="ngForm" class="my-4 md:my-8">
         <!-- Header -->
         <div class="flex flex-row w-full justify-between items-center border-b-2 p-2 border-[var(--text-primary)]">
           <div class="flex flex-row items-center">
@@ -211,7 +211,7 @@
       </form>
     }
 
-    <button class="text-sm px-5 py-4 mt-4 md:mt-4 rounded-full bg-[var(--text-primary)] text-[var(--bg-page)] md:hover:bg-[var(--text-primary-hover)]" (click)="save()">
+    <button class="text-sm px-5 py-4 mt-4 mb-8 rounded-full bg-[var(--text-primary)] text-[var(--bg-page)] md:hover:bg-[var(--text-primary-hover)]" (click)="save()">
       Save Configuration
     </button>
   </div>
