implemented topic reordering

--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -50,10 +50,11 @@
   <app-sidebar 
     [class]="`w-5/6 lg:w-3/12 h-full absolute lg:relative ${sidebarOpen ? '' : 'hidden'} lg:block 
     overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 lg:hover:scrollbar-thumb-gray-500 bg-[var(--bg-page)] z-[19]`"
-    [content]="subjectContent" 
+    [(content)]="subjectContent" 
     [currentView]="currentView" 
     (updateView)="updatecurrentView($event)" 
     (closeSidebar)="toggleSidebar()"
+    (reorderTopicEvent)="reorderTopics($event)"
   ></app-sidebar>
 
   <!-- Main View Container -->
